--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^13.6.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
