--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,14 @@
     "@lottiefiles/dotlottie-react": "^0.17.8",
     "@reduxjs/toolkit": "^2.11.0",
     "aos": "^2.3.4",
-    "firebase": "^12.6.0",
+    "axios": "^1.13.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "next": "^15.0.3",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
@@ -29,7 +29,7 @@
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "^15.0.3",
     "tailwindcss": "^4"
   }
 }
