--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "browser-image-compression": "^2.0.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
