--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
+    "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
