--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.8",
+    "@openrouter/sdk": "^0.3.10",
     "@reduxjs/toolkit": "^2.11.0",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
